src/test/phase2/test_2_r03.out
[Semantic Error] Redefinition Error[15] at line 3: "weight" redefined.
[Semantic Error] Undefined Reference Error[14] at line 8: "Student" undefined.
[Semantic Error] Redefinition Error[3] at line 10: "age" redefined.