src/test/phase2/test_2_r03.spl
struct Student
{
    int weight;
    float weight;
};
int test_2_r03()
{
    struct Student amy;
    int age;
    float age;
    return 0;
}
